--- a/assignments/01_mueller/theorie.tex
+++ b/assignments/01_mueller/theorie.tex
@@ -1,13 +1,74 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
-\usepackage[]{algorithm2e}
+\usepackage[linesnumbered]{algorithm2e}
+\usepackage[margin=.75in]{geometry}
 \begin{document}
+%
+\title{Assignment 1 \\ Advanced Algorithms \& Data Structures PS}%
+\author{Christian Müller 1123410 \\ Daniel Kocher, 0926293}%
+\maketitle%
+\clearpage%
+%
+\noindent%
+{\bfseries Aufgabe 2} \newline%
+Geben Sie einen Pseudocode f{\"u}r das Divide\&Conquer Verfahren \texttt{ReportCuts} aus der Vorlesung an.%
 
-\title{Advanced Algorithms and Datastructures (Assignment 1)}
-\author{Christian Müller, Daniel Kocher}
-\maketitle
-\newpage
+\vspace{1cm}%
+\noindent {\bfseries Vorschlag Kocher}%
+\begin{algorithm}[ht]
+  \SetKwProg{Fn}{Function}{}{}%
+  \SetKwInOut{Input}{Input}%
+  \SetKwInOut{Output}{Output}%
+  \SetKwInOut{Variables}{Variables}%
+%
+  \Input{Menge $S$ bestehend aus vertikalen Segmenten und Endpunkten von horizontalen Segmenten}%
+  \Output{Alle Schnittpunkte von vertikalen Segmenten mit horizontalen Segmenten, von denen mindestens ein Endpunkt in $S$ ist}%
+  \Variables{
+    $L(S)$ enth{\"a}lt die y-Koordinaten aller linken Eckpunkte in $S$, deren rechter Partner nicht in $S$. \\
+    $R(S)$ enth{\"a}lt die y-Koordinaten aller rechten Eckpunkte in $S$, deren linker Partner nicht in $S$. \\
+    $V(S)$ enth{\"a}lt die y-Intervalle der vertikalen Segmente in $S$. \\
+    $L(S)$ und $R(S)$ sind nach steigenden y-Koordinaten sortierte, verkettete Listen. \\
+    $V(S)$ sind nach steigenden unteren Endpunkten sortierte, verkettete Listen.
+  }%
+  \Fn{ReportCuts($S$)}{%
+    \If{$|S| \le 1$}{
+      \tcp{Initialisierung von $L(S)$, $R(S)$ und $V(S)$}
+      Sei $s = (x, y)\in S$\;
+      \BlankLine%
+      \lIf{$s$ ist linker Endpunkt}{$L(S) \leftarrow \{y\}$, $R(S) \leftarrow \emptyset$, $V(S) \leftarrow \emptyset$}%
+      \BlankLine%
+      \lElseIf{$s$ ist rechter Endpunkt}{$L(S) \leftarrow \emptyset$, $R(S) \leftarrow \{y\}$, $V(S) \leftarrow \emptyset$}% 
+      \BlankLine%
+      \lElseIf{$S$ enth{\"a}lt nur das vertikale Segmente $v$}{$L(S) \leftarrow \emptyset$, $R(S) \leftarrow \emptyset$, $V(S) \leftarrow \{[y_1, y_2]\}$}% 
+      \BlankLine%
+      \Return \tcp*{Rekursionsende}%
+    }%
+    \BlankLine%
+    \If{$S$ ist nicht nach horizontalen Koordinaten sortiert}{Sortiere $S$ nach horizontalen Koordinaten\;}%
+    \BlankLine\BlankLine%
+    \tcp{Divide Schritt}%
+    Teile $S$ per vertikaler Trennlinie in zwei (nahezu) gleich gro{\ss}e Teile $S_1$ und $S_2$ auf\;%
+    \BlankLine\BlankLine%
+    \tcp{Conquer Schritt}%
+    ReportCuts($S_1$)\;%
+    ReportCuts($S_2$)\;%
+    \BlankLine\BlankLine%
+    \tcp{$L(S_i)$, $R(S_i)$, $V(S_i)$ f{\"u}r $i = 1, 2$ bekannt $\Rightarrow$ Merge Schritt}
+    \tcp{Berichte Segmentschnittpunkte (Paare $(h, v)$)}
+    Sei $y(h)\in R(S_2) \setminus L(S_1)$ und $[y_{unten}(v), y_{oben}(v)]\in V(S_1)$\;%
+    \lIf{$y_{unten}(v) \le y(h) \le y_{oben}(v)$}{print $(h, v)$}%
+    \BlankLine\BlankLine%
+    Sei $y(h)\in L(S_1) \setminus R(S_2)$ und $[y_{unten}(v), y_{oben}(v)]\in V(S_2)$\;%
+    \lIf{$y_{unten}(v) \le y(h) \le y_{oben}(v)$}{print $(h, v)$}%
+    \BlankLine\BlankLine%
+    \tcp{Aktualisiere $L(S)$, $R(S)$ und $V(S)$ f{\"u}r $S = S_1 \cup S_2$}
+    $L(S) = \left( L(S_1) \setminus R(S_2) \right) \cup L(S_2)$\;
+    $R(S) = \left( R(S_2) \setminus L(S_1) \right) \cup R(S_1)$\;
+    $V(S) = V(S_1) \cup V(S_2)$\;
+  }%
+\end{algorithm}
+
 \begin{algorithm}[H]
 
 \SetKwProg{Fn}{Function}{}{}
