--- a/assignments/02_kocher/theorie.tex
+++ b/assignments/02_kocher/theorie.tex
@@ -16,6 +16,13 @@
 \maketitle%
 \clearpage%
 %
+{\noindent\bfseries Aufgabe 4}%
+
+\medskip%
+
+{\noindent\LARGE VORSCHLAG KOCHER}%
+
+\medskip%
 \noindent
 F{\"u}r den Divide-\&-Conquer Algorithmus zur Berechnung von Segmentschnittpunkten
 werden zuerst zwei Datenstrukturen definiert, welche verwendet werden um die
@@ -25,44 +32,62 @@ Elemente der Menge $S$ darzustellen.
 Stellt einen Endpunkt eines horizontalen Segments dar.
 Jeder Endpunkt besitzt mindestens drei Felder:
 \begin{itemize}
-  \item[-] $x$ \ldots repr{\"a}sentiert die x-Koordinate des Endpunktes
-  \item[-] $y$ \ldots repr{\"a}sentiert die y-Koordinate des Endpunktes
-  \item[-] $ass$ \ldots Pointer zum zugeh{\"o}rigen Partner-Endpunkt
+  \item[-] $x$ \ldots repr{\"a}sentiert die x-Koordinate des Endpunktes.
+  \item[-] $y$ \ldots repr{\"a}sentiert die y-Koordinate des Endpunktes.
+  \item[-] $ass$ \ldots Pointer zum zugeh{\"o}rigen Partner-Endpunkt.
 \end{itemize}
 
 \paragraph{VertSegment}
 Stellt ein vertikales Segment dar. Jedes vertikale Segment besitzt mindestens
 drei Felder:
 \begin{itemize}
-  \item[-] $x$ \ldots repr{\"a}sentiert die x-Koordinate des vertikalen Segments
+  \item[-] $x$ \ldots repr{\"a}sentiert die x-Koordinate des vertikalen Segments.
   \item[-] $y_{unten}$ \ldots repr{\"a}sentiert die untere y-Koordinate des
-    vertikalen Segments
+    vertikalen Segments.
   \item[-] $y_{oben}$ \ldots repr{\"a}sentiert die obere y-Koordinate des
-    vertikalen Segments
+    vertikalen Segments.
 \end{itemize}
 %
-Desweiteren werden jeweils drei Listen $L(S_i)$, $R(S_i)$ und $V(S_i)$ f{\"u}r
-eine Menge $S_i$ ben{\"o}tigt. $L(S_i)$ enth{\"a}lt die y-Koordinaten aller linken
-Endpunkte in $S_i$, deren rechter Partner ($ass$) nicht in $S_i$ enthalten ist.
-Analog beinhaltet $R(S_i)$ die y-Koordinaten aller rechten Endpunkte in $S_i$,
-deren linker Partner ($ass$) nicht in $S_i$ liegt. $V(S_i$) hingegen enth{\"a}lt
-die y-Intervalle ($y_{unten}$ bis $y_{oben}$) der vertikalen Segmente in $S_i$.
+Desweiteren werden f{\"u}r jede Menge $S_i$ jeweils drei Listen $L(S_i)$, $R(S_i)$
+und $V(S_i)$ global verwaltet. Dies k{\"o}nnten auch lokale Listen sein,
+allerdings geht nachfolgender Algorithmus von global verwalteten Listen aus.
+
+$L(S_i)$ enth{\"a}lt die y-Koordinaten aller linken Endpunkte in $S_i$, deren
+rechter Partner ($ass$) nicht in $S_i$ enthalten ist. Analog beinhaltet $R(S_i)$
+die y-Koordinaten aller rechten Endpunkte in $S_i$, deren linker Partner ($ass$)
+nicht in $S_i$ liegt. $V(S_i$) hingegen enth{\"a}lt die y-Intervalle ($y_{unten}$
+bis $y_{oben}$) der vertikalen Segmente in $S_i$.
 
 $L(S)$ und $R(S)$ sind nach steigenden y-Koordinaten sortierte, einfach verkettete
 Listen. $V(S)$ sind nach steigenden unteren Endpunkten ($y_{unten}$) sortierte,
 einfach verkettete Listen.
-%
-Die einfach verketteten Listen stellen folgende Funktionen zur Verf{\"u}gung:
+
+Seien $l$, $l_i$ einfach verkettete Listen und $d$ ein Wert gespeichert in einer
+einfach verketteten Liste. Einfach verkettete Listen haben mindestens folgende
+Felder:
 \begin{itemize}
-  \item[-] $l_1.deleteAll(l_2)$ \ldots Entfernt alle Element von Liste $l_2$ aus
-    Liste $l1$
-  \item[-] $l_1.insertAll(l_2)$ \ldots F{\"u}gt alle Element von Liste $l_2$ zu
-    Liste $l_1$ hinzu
-  \item[-] $l.getHead()$ \ldots Gibt das erste Element der Liste $l$ zur{\"u}ck
-  \item[-] $l.search(d)$ \ldots Durchsucht die Liste $l$ nach einem Element $d$
-    und gibt dessen Knoten zur{\"u}ck (falls gefunden)
-  \item[-] $l.insert(d)$ \ldots F{\"u}gt das Element $d$ zu Liste $l$ hinzu
-  \item[-] $l.delete(d)$ \ldots Entfernt das Element $d$ aus Liste $l$
+  \item[-] $head$ \ldots Erster Knoten einer Liste.
+\end{itemize}
+
+\noindent
+Weiters stellen einfach verketteten Listen folgende Funktionen zur Verf{\"u}gung:
+\begin{itemize}
+  \item[-] $l_1$.deleteAll($l_2$) \ldots Entfernt alle Element von Liste $l_2$ aus
+    Liste $l1$.
+  \item[-] $l_1$.insertAll($l_2$) \ldots F{\"u}gt alle Element von Liste $l_2$ zu
+    Liste $l_1$ hinzu.
+  %\item[-] $l$.getHead() \ldots Gibt den ersten Knoten der Liste $l$ zur{\"u}ck.
+  \item[-] $l$.search($d$) \ldots Durchsucht die Liste $l$ nach einem Element $d$
+    und gibt dessen Knoten zur{\"u}ck (falls gefunden).
+  \item[-] $l$.insert($d$) \ldots F{\"u}gt das Element $d$ zu Liste $l$ hinzu.
+  \item[-] $l$.delete($d$) \ldots Entfernt das Element $d$ aus Liste $l$.
+\end{itemize}
+%
+Knoten einer einfach verketteten Liste stellen mindestens die folgenden Felder
+bereit:
+\begin{itemize}
+  \item[-] $next$ \ldots N{\"a}chster Knoten.
+  %\item[-] $data$ \ldots Korrespondierender Datensatz.
 \end{itemize}
 %
 \begin{algorithm}
@@ -97,40 +122,48 @@ Die einfach verketteten Listen stellen folgende Funktionen zur Verf{\"u}gung:
     }%
   
     \BlankLine\BlankLine%
-    \tcp{Divide Schritt}%
-    \lIf{$|S|$ ist gerade}{$h \leftarrow |S| / 2$}%
-    \lElse{$h \leftarrow \lceil |S| / 2 \rceil$}%
-    $S_1 \leftarrow $ Liste der ersten $h$ Elemente aus $S$\;
-    $S_2 \leftarrow $ Liste der letzten $\left( |S| - h \right)$ Elemente aus $S$\;
+    \tcc{
+      Divide Schritt. \newline
+      $m$ sei ein Integer (repr{\"a}sentiert die Mitte der Liste $S$). \newline
+      $S_1$ und $S_2$ seien Listen von vertikalen Segmenten und Endpunkten von
+      horizontalen Segmenten, sortiert bezüglich ihrer x-Koordinaten.
+    }%
+    \lIf{$|S|$ ist gerade}{$m \leftarrow |S| / 2$}%
+    \lElse{$m \leftarrow \lceil |S| / 2 \rceil$}%
+    $S_1 \leftarrow $ Liste der ersten $m$ Elemente aus $S$\;
+    $S_2 \leftarrow $ Liste der letzten $\left( |S| - m \right)$ Elemente aus $S$\;
     \BlankLine\BlankLine%
     \tcp{Conquer Schritt}%
     ReportCuts($S_1$)\;%
     ReportCuts($S_2$)\;%
     \BlankLine\BlankLine%
-    \tcp{$L(S_i)$, $R(S_i)$, $V(S_i)$ f{\"u}r $i = 1, 2$ bekannt $\Rightarrow$ Merge Schritt}
-    \tcp{Berichte Segmentschnittpunkte (Paare $(h, v)$)}
+    \tcc{
+      $L(S_i)$, $R(S_i)$, $V(S_i)$ f{\"u}r $i = 1, 2$ bekannt $\Rightarrow$ Merge
+      Schritt \newline%
+      Berichte Segmentschnittpunkte (Paare $(h, v)$)%
+    }%
     $h_1 \leftarrow R(S_2)$\;
-    $DeletePartners(h_1, L(S_1))$\;
+    DeletePartners($h_1$, $L(S_1)$)\;
     $v_1 \leftarrow V(S_1)$\;
     IntersectAndReport($h_1$, $v_1$)\;
     \BlankLine%
     $h_2 \leftarrow L(S_1)$\;
-    $DeletePartnersOf(h_2, R(S_2))$\;
+    DeletePartnersOf($h_2$, $R(S_2)$)\;
     $v_2 \leftarrow V(S_2)$\;
     IntersectAndReport($h_2$, $v_2$)\;
     
     \BlankLine\BlankLine%
     \tcp{Aktualisiere $L(S)$, $R(S)$ und $V(S)$ f{\"u}r $S = S_1 \cup S_2$}
     $L(S) \leftarrow L(S_1)$\;
-    $L(S).DeleteAll(R(S_2))$\;
-    $L(S).InsertAll(L(S_2))$\;
+    $L(S)$.DeleteAll($R(S_2)$)\;
+    $L(S)$.InsertAll($L(S_2)$)\;
     \BlankLine%
     $R(S) \leftarrow R(S_2)$\;
-    $R(S).DeleteAll(L(S_1))$\;
-    $R(S).InsertAll(R(S_1))$\;
+    $R(S)$.DeleteAll($L(S_1)$)\;
+    $R(S)$.InsertAll($R(S_1)$)\;
     \BlankLine%
     $V(S) \leftarrow V(S_1)$\;
-    $V(S).InsertAll(V(S_2))$\;
+    $V(S)$.InsertAll($V(S_2)$)\;
   }%
 \end{algorithmic}
 \end{algorithm}
@@ -142,7 +175,8 @@ Die einfach verketteten Listen stellen folgende Funktionen zur Verf{\"u}gung:
   \SetKwInOut{Output}{Output}%
 %
   \Input{
-    Zwei einfach verkettete Listen $l_1$ und $l_2$.
+    Zwei einfach verkettete Listen $l_1$ und $l_2$. \newline%
+    $l_{1,2}$ beinhalten nur Endpunkte von horizontalen Segmenten.
   }%
   \Output{
     Eine Liste, welche alle Elemente aus $l_1$ beinhaltet, die keinen Partner in
@@ -150,10 +184,10 @@ Die einfach verketteten Listen stellen folgende Funktionen zur Verf{\"u}gung:
   }%
 
   \Fn{DeletePartnersOf($l_1$, $l_2$)}{
-    \lIf{$l_2$ is empty}{\Return $l_1$}
+    \lIf{$l_2$ ist leer}{\Return $l_1$}
 
-    $current \leftarrow l_2.getHead()$\;
-    \While{$current \not= null$}{
+    $current \leftarrow l_2.head$\;
+    \While{$current \neq null$}{
       \lIf{$l_1.search(current.ass)$ hat einen Partner gefunden}{
         $l_1.delete(current)$
       }
@@ -167,32 +201,44 @@ Die einfach verketteten Listen stellen folgende Funktionen zur Verf{\"u}gung:
 %
 \begin{algorithm}                     
 \begin{algorithmic} [1]  
-\SetKwProg{Fn}{Function}{}{}%                 % enter the algorithmic environment
+  \SetKwProg{Fn}{Function}{}{}%                 % enter the algorithmic environment
+  \SetKwInOut{Input}{Input}%
+  \SetKwInOut{Output}{Output}%
+%
+  \Input{
+    Zwei einfach verkettete Listen $h$ und $v$. \newline%
+    $h$ enth{\"a}lt Endpunkte von horizontalen Segmenten. \newline%
+    $v$ enth{\"a}lt vertikale Segmente. \newline%
+    $h$ und $v$ sind aufsteigend gem{\"a}{\ss} $y$ bzw. $y_{unten}$ sortiert.%
+  }%
+  \Output{
+    Berichtet alle Schnittpunkte zwischen Elementen aus $v$ und Elementen aus $h$.
+  }%
   \Fn{IntersectAndReport($H(S)$,$V(S)$)}{
-  	\tcp{Sei $\dot{V}=(v_1,v_2,..,v_n)$ mit $v_i=(y_{unten},y_{oben})$ eine einfach verkettete aufsteigend sortierte (gemäß $y_{unten}$) Liste die alle Element aus $V(S)$ enthält.}
-  	\tcp{Sei $\dot{H}=(h_1,h_2,..,h_n)$ mit $h_i=(x,y)$ eine einfach verkettete aufsteigend sortierte (gemäß $y$) Liste die alle Element aus $V(S)$ enthält.}
-	$currHor \leftarrow h_1$\;
-	$currVert \leftarrow v_1$\;
-\While{$currVert$ $\neq$ $null$}{
-	
-	\eIf{intersects($currVert$,$currHor$)}{
-		print($currHor$,$currVert$)\;
-		$tmpHor \leftarrow currHor.next$\;
-		\While{$tmpHor$ $\neq$ $null$ \textbf{and} intersects($currVert$,$tmpHor$)}{
-			print($tmpHor$,$currVert$)\;
-			$tmpHor \leftarrow tmpHor.next$\;
-		}
-		$currVert \leftarrow currVer.next$\;
-	}{
-		\If{$currHor.y < currVert.y_{unten}$}{
-			$currHor \leftarrow currHor.next$\;
-			}
-	}
-}
-  
+    \tcp{Keine Schnittpunkte m{\"o}glich}%
+    \lIf{$h$ ist leer \textbf{oder} $v$ ist leer}{\Return}%
+    \BlankLine%
+    $currHor \leftarrow h$.head\;
+    $currVert \leftarrow v$.head\;
+    \While{$currHor \neq null$ und $currVert \neq null$}{
+      \lIf{$currHor.y > currVert.y_{oben}$}{$currVert = currVert.next$}%
+      \BlankLine%
+      \eIf{$currHor.y \geq currVert.y_{unten}$}{
+		    print($currVert.x$, $currHor.y$)\;
+		    \BlankLine%
+        $tmpHor \leftarrow currHor.next$\;
+        \While{$tmpHor$ $\neq$ $null$ \textbf{und} $tmpHor.y < currVert.y_{oben}$}
+        {
+			    print($currVert.x$, $tmpHor.y$)\;
+			    $tmpHor \leftarrow tmpHor.next$\;
+		    }
+		    $currVert \leftarrow currVer.next$\;
+      }{
+        \lIf{$currVert \neq null$}{$currHor \leftarrow currHor.next$}
+      }
+	  }
   }
 \end{algorithmic}
 \end{algorithm}
-
 
 \end{document}
