--- a/assignments/03_mueller/theorie.tex
+++ b/assignments/03_mueller/theorie.tex
@@ -2,6 +2,7 @@
 
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage{commath}
+\usepackage{mathtools}
 
 \usepackage[utf8]{inputenc}
 \begin{document}
@@ -9,134 +10,193 @@
 \author{Christian Müller 1123410 \\ Daniel Kocher, 0926293}%
 \maketitle
 
-
+{\noindent\bfseries Aufgabe 5}%
+\medskip%
  
- \begin{proof}
- Zu zeigen: Ist $D_{ij}$ ungerade so ist $D^{'}_{kj} \leq D^{'}_{ij}$ für alle Nachbarn k von i.
-\begin{equation}
-D_{ij}(mod 2) = 1
-\end{equation}
-\begin{equation}
-\implies \exists l \in N: D_{ij} = 2l-1
-\end{equation}
-und es gilt:
-\begin{equation}
-D_{ij} = 2D^{'}_{ij}-1
-\end{equation}
-aus (2) und (3) folgt: 
-\begin{equation}
-2l-1 = 2D^{'}_{ij}-1 \implies D^{'}_{ij} = l
-\end{equation}
-Der Knoten k ist direkter Nachbar von i also gilt:
-\begin{equation}
-D_{ij}-1 \leq D_{kj} \leq D_{ij}+1
-\end{equation}
-
-Fall 1: $D_{kj} = D_{ij}-1$
-\begin{equation}
-D_{kj} = D_{ij}-1=2l-2
-\end{equation}
-\begin{equation}
-D_{kj}(mod2) = 0 \implies D_{kj}=2D^{'}_{kj}
-\end{equation}
-\begin{equation}
-2l-2 = 2D^{'}_{kj} \implies D^{'}_{kj}=l-1
-\end{equation}
-\begin{equation}
-D^{'}_{ij} =l \wedge D^{'}_{kj} =l-1 \implies D^{'}_{kj} \leq D^{'}_{ij}
-\end{equation}
-
-Fall 2: $D_{kj} = D_{ij}$
-\begin{equation}
-D_{kj} = D_{ij}=2l-1
-\end{equation}
-\begin{equation}
-D_{kj}(mod2) = 1 \implies D_{kj}=2D^{'}_{kj}-1
-\end{equation}
-\begin{equation}
-2l-1 = 2D^{'}_{kj}-1 \implies D^{'}_{kj}=l
-\end{equation}
-\begin{equation}
-D^{'}_{ij} =l \wedge D^{'}_{kj} =l \implies D^{'}_{kj} \leq D^{'}_{ij}
-\end{equation}
-
-Fall 3: $D_{kj} = D_{ij}+1$
-\begin{equation}
-D_{kj} = D_{ij}+1=2l
-\end{equation}
-\begin{equation}
-D_{kj}(mod2) = 0 \implies D_{kj}=2D^{'}_{kj}
-\end{equation}
-\begin{equation}
-2l = 2D^{'}_{kj} \implies D^{'}_{kj}=l
-\end{equation}
-\begin{equation}
-D^{'}_{ij} =l \wedge D^{'}_{kj} =l \implies D^{'}_{kj} \leq D^{'}_{ij}
-\end{equation}
-
-\end{proof}
-\newpage
 \begin{proof}
- Zu zeigen: $D_{ij}$ ist gerade genau dann, wenn $\sum_{k \in \Gamma(i)} D^{'}_{kj} \geq D^{'}_{ij} * deg(i)$.
+\noindent
+Zu zeigen:
+\begin{enumerate}
+  \item[i.)] Ist $D_{ij}$ ungerade, so gilt $D^{'}_{kj} \leq D^{'}_{ij}$ für alle Nachbarn k von i und
+  \item[ii.)] es gibt einen Knoten $k \in \Gamma(i)$, so dass $D^{'}_{kj} < D^{'}_{ij}$.
+\end{enumerate}
+\begin{equation}
+  D_{ij}(\text{mod } 2) = 1
+\end{equation}
+\begin{equation}
+  \implies \exists l \in \mathbb{N}: D_{ij} = 2l - 1
+\end{equation}
 
+\noindent
+und es gilt (Lemma aus VO):
 \begin{equation}
-D_{ij}(mod 2) = 0
+  D_{ij} = 2D^{'}_{ij} - 1 \text{(f{\"u}r $D_{ij}$ ungerade)}
 \end{equation}
 \begin{equation}
-\implies \exists l \in N: D_{ij} = 2l
+  D_{ij} = 2D^{'}_{ij} \text{(f{\"u}r $D_{ij}$ gerade)}
 \end{equation}
-und es gilt:
-\begin{equation}
-D_{ij} = 2D^{'}_{ij}
-\end{equation}
+
+\noindent
 aus (2) und (3) folgt: 
 \begin{equation}
-2l = 2D^{'}_{ij} \implies D^{'}_{ij} = l
-\end{equation}
-Der Knoten k ist direkter Nachbar von i also gilt:
-\begin{equation}
-D_{ij}-1 \leq D_{kj} \leq D_{ij}+1
+  2l-1 = 2D^{'}_{ij}-1 \implies D^{'}_{ij} = l
 \end{equation}
 
-Fall 1: $D_{kj} = D_{ij}-1$
+\noindent
+Der Knoten k ist direkter Nachbar von i also gilt (Lemma aus VO):
 \begin{equation}
-D_{kj} = D_{ij}-1=2l-1
-\end{equation}
-\begin{equation}
-D_{kj}(mod2) = 1 \implies D_{kj}=2D^{'}_{kj}-1
-\end{equation}
-\begin{equation}
-2l-1 = 2D^{'}_{kj}-1 \implies D^{'}_{kj}=l
+  D_{ij} - 1 \leq D_{kj} \leq D_{ij} + 1
 \end{equation}
 
+\noindent
+Fall 1: $D_{kj} = D_{ij} - 1$
+\begin{equation}
+  D_{kj} = D_{ij} - 1 = 2l - 2
+\end{equation}
+\begin{equation}
+  D_{kj}(\text{mod } 2) = 0 \xRightarrow{(4)} D_{kj}=2D^{'}_{kj}
+\end{equation}
+\begin{equation}
+  2l-2 = 2D^{'}_{kj} \implies D^{'}_{kj}=l-1
+\end{equation}
+\begin{equation}
+  D^{'}_{ij} =l \wedge D^{'}_{kj} =l-1 \implies D^{'}_{kj} < D^{'}_{ij}
+\end{equation}
+
+\noindent
 Fall 2: $D_{kj} = D_{ij}$
 \begin{equation}
-D_{kj} = D_{ij}=2l
+  D_{kj} = D_{ij}=2l-1
 \end{equation}
 \begin{equation}
-D_{kj}(mod2) = 0 \implies D_{kj}=2D^{'}_{kj}
+  D_{kj}(\text{mod } 2) = 1 \xRightarrow{(4)} D_{kj} = 2D^{'}_{kj} - 1
 \end{equation}
 \begin{equation}
-2l = 2D^{'}_{kj} \implies D^{'}_{kj}=l
+  2l - 1 = 2D^{'}_{kj} - 1 \implies D^{'}_{kj} = l
+\end{equation}
+\begin{equation}
+  D^{'}_{ij} = l \wedge D^{'}_{kj} = l \implies D^{'}_{kj} \leq D^{'}_{ij}
 \end{equation}
 
-Fall 3: $D_{kj} = D_{ij}+1$
+\noindent
+Fall 3: $D_{kj} = D_{ij} + 1$
 \begin{equation}
-D_{kj} = D_{ij}+1=2l+1
+  D_{kj} = D_{ij} + 1 = 2l
 \end{equation}
 \begin{equation}
-D_{kj}(mod2) = 1 \implies D_{kj}=2D^{'}_{kj}-1
+  D_{kj}(\text{mod } 2) = 0 \xRightarrow{(4)} D_{kj} = 2D^{'}_{kj}
 \end{equation}
 \begin{equation}
-2l+1 = 2D^{'}_{kj}-1 \implies D^{'}_{kj}=l+1
+  2l = 2D^{'}_{kj} \implies D^{'}_{kj} = l
 \end{equation}
-Es gilt also:
 \begin{equation}
-\forall k \in \Gamma(i): D^{'}_{kj} \geq l
+  D^{'}_{ij} = l \wedge D^{'}_{kj} = l \implies D^{'}_{kj} \leq D^{'}_{ij}
 \end{equation}
-Sei $m=\abs{\Gamma(i)}=deg(i)$, dann:
-\begin{equation}
-\sum_{k \in \Gamma(i)} D^{'}_{kj} \geq m*l = D^{'}_{ij} * deg(i)  
-\end{equation}
+
+\noindent
+Damit sind i.) und ii.) wie folgt bewiesen:
+\begin{itemize}
+  \item[] i.) durch (10), (14) und (18).
+  \item[] ii.) durch (10).
+\end{itemize}
 \end{proof}
+
+\newpage
+{\noindent\bfseries Aufgabe 6}%
+\medskip%
+
+\begin{proof}
+\noindent
+Zu zeigen:
+\begin{enumerate}
+  \item[i.)] $D_{ij}$ ist gerade genau dann, wenn $\sum_{k \in \Gamma(i)} D^{'}_{kj} \geq D^{'}_{ij} \cdot \text{deg}(i)$.
+  \item[ii.)] $D_{ij}$ ist ungerade genau dann, wenn $\sum_{k \in \Gamma(i)} D^{'}_{kj} < D^{'}_{ij} \cdot \text{deg}(i)$.
+\end{enumerate}
+
+\begin{equation}
+  D_{ij}(\text{mod } 2) = 0
+\end{equation}
+\begin{equation}
+  \implies \exists l \in \mathbb{N}: D_{ij} = 2l
+\end{equation}
+
+\noindent
+und es gilt:
+\begin{equation}
+  D_{ij} = 2D^{'}_{ij}
+\end{equation}
+
+\noindent
+aus (20) und (21) folgt: 
+\begin{equation}
+  2l = 2D^{'}_{ij} \implies D^{'}_{ij} = l
+\end{equation}
+
+\noindent
+Der Knoten k ist direkter Nachbar von i also gilt:
+\begin{equation}
+  D_{ij} - 1 \leq D_{kj} \leq D_{ij} + 1
+\end{equation}
+
+\noindent
+Fall 1: $D_{kj} = D_{ij} - 1$
+\begin{equation}
+  D_{kj} = D_{ij} - 1  = 2l - 1
+\end{equation}
+\begin{equation}
+  D_{kj}(\text{mod } 2) = 1 \implies D_{kj} = 2D^{'}_{kj} - 1
+\end{equation}
+\begin{equation}
+2l - 1 = 2D^{'}_{kj} - 1 \implies D^{'}_{kj} = l
+\end{equation}
+
+\noindent
+Fall 2: $D_{kj} = D_{ij}$
+\begin{equation}
+  D_{kj} = D_{ij} = 2l
+\end{equation}
+\begin{equation}
+  D_{kj}(\text{mod } 2) = 0 \implies D_{kj} = 2D^{'}_{kj}
+\end{equation}
+\begin{equation}
+ 2l = 2D^{'}_{kj} \implies D^{'}_{kj} = l
+\end{equation}
+
+\noindent
+Fall 3: $D_{kj} = D_{ij} + 1$
+\begin{equation}
+  D_{kj} = D_{ij} + 1 = 2l + 1
+\end{equation}
+\begin{equation}
+  D_{kj}(\text{mod } 2) = 1 \implies D_{kj} = 2D^{'}_{kj} - 1
+\end{equation}
+\begin{equation}
+  2l + 1 = 2D^{'}_{kj} - 1 \implies D^{'}_{kj} = l + 1
+\end{equation}
+
+\noindent
+Es folgt also aus (26), (29) und (32):
+\begin{equation}
+  \forall k \in \Gamma(i): D^{'}_{kj} \geq l
+\end{equation}
+
+\noindent
+Weiters folgt aus (10), (14) und (18) sowie ii.) (Aufgabe 5):
+\begin{equation}
+  \forall k \in \Gamma(i): D^{'}_{kj} < l
+\end{equation}
+
+\noindent
+Sei $m=\abs{\Gamma(i)} = \text{deg}(i)$, dann folgen daraus die sich gegenseitig ausschlie{\ss}enden Formeln:
+\begin{equation}
+  \sum_{k \in \Gamma(i)} D^{'}_{kj} \geq l \cdot m = D^{'}_{ij} \cdot \text{deg}(i)
+\end{equation}
+\begin{equation}
+  \sum_{k \in \Gamma(i)} D^{'}_{kj} < l \cdot m = D^{'}_{ij} \cdot \text{deg}(i)
+\end{equation}
+
+\noindent
+Aus (35) und (36) folgt dann das Lemma der Angabe.
+\end{proof}
+
 \end{document}
