--- a/assignments/03_mueller/theorie.tex
+++ b/assignments/03_mueller/theorie.tex
@@ -97,7 +97,7 @@ Fall 3: $D_{kj} = D_{ij} + 1$
 Damit sind i.) und ii.) wie folgt bewiesen:
 \begin{itemize}
   \item[] i.) durch (10), (14) und (18).
-  \item[] ii.) durch (10).
+  \item[] ii.) durch (10) und der Tatsache, dass es einen Knoten $k$ mit $D_{kj} = D_{ij} - 1$ geben muss. Der Knoten $k$ ist der erste Knoten der auf dem kürzesten Weg von $i$ nach $j$ besucht wird. Würde ein solcher Knoten nicht existieren gäbe es auch diesen Weg nicht.
 \end{itemize}
 \end{proof}
 
