Minor additions to the conclusions of Aufgabe 7

--- a/assignments/04_kocher/theorie.tex
+++ b/assignments/04_kocher/theorie.tex
@@ -169,6 +169,20 @@ Wahrscheinlichkeit $\geq 1 - n^{-2}$ gefunden.
   Aus Gleichung (14) ergibt sich also, dass alle $x \leq 6.8175866$ Gleichung (9)
   erf{\"u}llen. \newline
   Daraus folgt, dass Gleichung (8) f{\"u}r alle $x \leq 6.8175866$ g{\"u}ltig ist.
+
+  Dass die Zeilen 14 - 18 (bzw. die Zeilen 14 - 16 vom originalen Code auf Folie
+  23) entfernt werden k{\"o}nnen, ergibt sich, da nachdem der randomisierte
+  Teil des Codes ausgef{\"u}hrt wurde, erwartet nurmehr
+
+  \begin{equation}
+    \frac{1}{n^2} \cdot n^2 = 1
+  \end{equation}
+
+  Zeugen fehlen.
+
+  W{\"u}rde man $x$ nun noch wesentlich h{\"o}her w{\"a}hlen, dann w{\"u}rde
+  nach der Ausf{\"u}hrung des randomisierten Teils des Codes erwartet nurmehr
+  $< 1$ Zeugen fehlen.
 \end{proof}
 
 \newpage
@@ -227,7 +241,7 @@ zur{\"u}ckzulegen, so ist
 \end{proof}
 
 \noindent
-Daraus folgt, je gr{\"o}{\ss}er $c$ gew{\"a}hlt wird, desto kleiner wird die
+Das hei{\ss}t also, je gr{\"o}{\ss}er $c$ gew{\"a}hlt wird, desto kleiner wird die
 Wahrscheinlichkeit genau einen wei{\ss}en Ball aus den $n$ B{\"a}llen zu ziehen.
 
 \end{document}
