--- a/assignments/04_kocher/theorie.tex
+++ b/assignments/04_kocher/theorie.tex
@@ -197,6 +197,9 @@ Wahrscheinlichkeit $\geq 1 - n^{-2}$ gefunden.
   W{\"u}rde man $x$ nun noch wesentlich h{\"o}her w{\"a}hlen, dann w{\"u}rde
   nach der Ausf{\"u}hrung des randomisierten Teils des Codes erwartet nurmehr
   $< 1$ Zeugen fehlen.
+
+  F{\"u}r alle (Un-)Gleichungen wurde der Logarithmus zur Basis 2 ($log_2(n)$)
+  angenommen.
 \end{proof}
 
 \newpage
