Remove incorrect and unnecessary line (assignment 7); Fix typo (assignment 8)

--- a/assignments/04_kocher/theorie.tex
+++ b/assignments/04_kocher/theorie.tex
@@ -175,9 +175,7 @@ Wahrscheinlichkeit $\geq 1 - n^{-2}$ gefunden.
   \end{equation}
 
   Aus Gleichung (14) ergibt sich also, dass alle $x \geq 6.82006$ Gleichung (9)
-  erf{\"u}llen. \newline
-
-  Daraus folgt, dass Gleichung (8) f{\"u}r alle $x \leq 6.8175866$ g{\"u}ltig ist.
+  erf{\"u}llen.
 
   Wir w{\"a}hlen nun $x = 6.95$, was Gleichung (14) erf{\"u}llt. \newline
   Damit garantiert der angepasste $BPWM$-Algorithmus (vgl. Beginn Aufgabe 7),
@@ -270,13 +268,13 @@ zur{\"u}ckzulegen, so ist
   \end{equation}
 
   \begin{equation}
-    \left( 1 - \frac{1}{k} \right)^k \rightarrow \frac{1}{c} \text{ und }
+    \left( 1 - \frac{1}{k} \right)^k \rightarrow \frac{1}{e} \text{ und }
     \left( 1 - \frac{1}{k} \right)^{k - 1} \geq \frac{1}{e}
   \end{equation}
 
   \bigskip
   \noindent
-  Setzt man nun (25) - (27) in obige Formel ein, dann folgt:
+  Setzt man nun (25) - (27) in (24) ein, dann folgt:
 
   \begin{equation}
     \geq \frac{1}{2 \cdot c} \cdot \left( 1 - \frac{1}{w} \right)^{w - 1}
