--- a/assignments/05_mueller/theorie.tex
+++ b/assignments/05_mueller/theorie.tex
@@ -12,6 +12,7 @@
 
 {\noindent\bfseries Aufgabe 9}%
 \medskip%
+
  Zu zeigen: Sei $m \leq i$: $x_{i}$ Vorfahre von $x_{m}$ $\Leftrightarrow$ $P_{min}(\lbrace x_{m},...,x_{i} \rbrace)=x_{i}$ \\
 \begin{proof}
 \noindent
@@ -28,7 +29,7 @@ ii) $"\Rightarrow"$\\
 Sei: $P_{min}(\lbrace x_{m},...,x_{i} \rbrace)=x_{j}$; Zeige: $i=j$\\
 Annahme: $x_{i}$ Vorfahre von $x_{m}$\\
 Knoten werden nach Prioritäten in den Suchbaum eingefügt $\Rightarrow$ aus der Menge $\lbrace x_{m},...,x_{i} \rbrace$ wird $x_{j}$ als erster eingefügt.\\
-Für die Knoten $x_{k}$ mit Schlüssel $k$ die vor $x_{i}$ eingefügt wurden haben die Eigenschaft: $k < key(x_{m})$ oder $k > key(x_{i})$.
+Für die Knoten $x_{k}$ mit Schlüssel $k$ die vor $x_{j}$ eingefügt wurden haben die Eigenschaft: $k < key(x_{m})$ oder $k > key(x_{i})$.
 Jeder Knoten $x_{l}$ aus $\lbrace x_{m},...,x_{i} \rbrace$ mit $l \neq j$ muss beim Einfügen denselben Pfad durchlaufen wie $x_{j}$.\\
 Falls $j \neq i,m$: $x_{m}$ landet im linken Unterbaum von $x_{j}$ und $x_{i}$ im rechten Unterbaum von $x_{j}$ $\implies$ $x_{i}$ ist kein Vorfahr von $x_{m}$.\\
 Falls $j=m$: $x_{i}$ landet im rechten Unterbaum von $x_{m} \implies x_{m}$ ist Vorfahre von $x_{i}$\\
