--- a/assignments/05_mueller/theorie.tex
+++ b/assignments/05_mueller/theorie.tex
@@ -13,6 +13,7 @@
 {\noindent\bfseries Aufgabe 9}%
 \medskip%
 
+\noindent
 Zu zeigen: Sei $m < i$: $x_{i}$ Vorfahre von $x_{m}$ $\Leftrightarrow$ $P_{min}(\lbrace x_{m},...,x_{i} \rbrace)=x_{i}$ \\
 
 \begin{proof}
@@ -41,56 +42,59 @@ $\implies j=i$
 {\noindent\bfseries Aufgabe 10}%
 \medskip%\\
 
- Zu zeigen: Sei $m$ die Anzahl der Schlüssel, die kleiner als der gesuchte Schlüssel $k$ sind. Die erwartete Anzahl von Knoten auf dem Suchpfad ist $H_{m}+H_{n-m}$. 
+\noindent
+Zu zeigen: Sei $m$ die Anzahl der Schlüssel, die kleiner als der gesuchte Schlüssel $k$ sind. Die erwartete Anzahl von Knoten auf dem Suchpfad ist $H_{m}+H_{n-m}$. 
 \begin{proof}
 \noindent
 
+\noindent
 Sei $x_{k}$ der Knoten mit Schlüssel $k$ der ohne Berücksichtigung der Prioritäten in den gegebenen Suchbaum imaginär eingefügt wird.\\
 
+\noindent
 Sei:\\
   \[
     X_{k,i}=\left\{
                 \begin{array}{ll}
-                  1\text{, } x_{i} \text{ ist Vorfahr des neuen imaginaren Knotens } x_{k} \text{ mit } key(x_{k})=k\\
+                  1\text{, } x_{i} \text{ ist Vorfahr des neuen imaginären Knotens } x_{k} \text{ mit } key(x_{k})=k\\
                   0 \text{, sonst}\\
                 
                 \end{array}
               \right.
   \]
 und:\\
-Sei $X_{k}$ die Anzahl der Knoten auf dem Pfad von der Wurzel nach dem Knoten $x_{k}$ (ohne $x_{k}$)
+Sei $X_{k}$ die Anzahl der Knoten auf dem Pfad von der Wurzel nach Knoten $x_{k}$ (ohne $x_{k}$, denn $x_k$ existiert nur imaginär).
 \begin{equation}
 X_{k}=\sum_{i<k} X_{k,i} +\sum_{i>k} X_{k,i}
 \end{equation}
 \begin{equation}
-E[X_{k}]=E[\sum_{i<k} X_{k,i}] +E[\sum_{i>k} X_{k,i}]
+E\left[X_{k}\right]=E\left[\sum_{i<k} X_{k,i}\right] +E\left[\sum_{i>k} X_{k,i}\right]
 \end{equation}
 \begin{equation}
-E[X_{k}]=\sum_{i<k} E[X_{k,i}] +\sum_{i>k} E[X_{k,i}]
+E\left[X_{k}\right]=\sum_{i<k} E\left[X_{k,i}\right] +\sum_{i>k} E\left[X_{k,i}\right]
 \end{equation}
-F1$(i<k)$: gilt für $m$ Knoten des Suchbaums\\
+F1$(i<k)$: gilt für $m$ Knoten des Suchbaums (aus der Angabe)\\
 \begin{equation}
-E[X_{k,i}]=Pr[P_{min}(\lbrace x_{1},...,x_{i}\rbrace)=x_{i}]=\frac{1}{i}
+E\left[X_{k,i}\right]=Pr\left[P_{min}(\lbrace x_{1},...,x_{i}\rbrace)=x_{i}\right]=\frac{1}{i}
 \end{equation}
 F2$(i>k)$: gilt für $n-m$ Knoten des Suchbaums\\
 \begin{equation}
-E[X_{k,i}]=Pr[P_{min}(\lbrace x_{i},...,x_{n}\rbrace)=x_{i}]=\frac{1}{n-i+1}
+E\left[X_{k,i}\right]=Pr\left[P_{min}(\lbrace x_{i},...,x_{n}\rbrace)=x_{i}\right]=\frac{1}{n-i+1}
 \end{equation}
 Also:\\
 \begin{equation}
-E[X_{k}]=\sum_{i<k} E[X_{k,i}] +\sum_{i>k} E[X_{k,i}]
+E\left[X_{k}\right]=\sum_{i<k} E\left[X_{k,i}\right] +\sum_{i>k} E\left[X_{k,i}\right]
 \end{equation}
 \begin{equation}
-E[X_{k}]=\sum_{i=1}^{m} \frac{1}{i} +\sum_{i=m+1}^{n} \frac{1}{n-i+1}
+E\left[X_{k}\right]=\sum_{i=1}^{m} \frac{1}{i} +\sum_{i=m+1}^{n} \frac{1}{n-i+1}
 \end{equation}
 \begin{equation}
-E[X_{k}]=(1+\frac{1}{2}+...+\frac{1}{m})+(\frac{1}{n-(m+1)+1}+...+\frac{1}{n-n+1})
+E\left[X_{k}\right]=\left(1+\frac{1}{2}+...+\frac{1}{m}\right)+\left(\frac{1}{n-(m+1)+1}+...+\frac{1}{n-n+1}\right)
 \end{equation}
 \begin{equation}
-E[X_{k}]=(1+\frac{1}{2}+...+\frac{1}{m})+(\frac{1}{n-m}+...+1)
+E\left[X_{k}\right]=\left(1+\frac{1}{2}+...+\frac{1}{m}\right)+\left(\frac{1}{n-m}+\frac{1}{n-m-1}+...+1\right)
 \end{equation}
 \begin{equation}
-E[X_{k}]=H_{m}+H_{n-m}
+E\left[X_{k}\right]=H_{m}+H_{n-m}
 \end{equation}
 \end{proof}
 \end{document}
